[gd_scene load_steps=18 format=3 uid="uid://c3imbqng7ltbj"]

[ext_resource type="Script" uid="uid://cptul7o71dxfv" path="res://Script/background.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://bl62f2gelm5t2" path="res://Image/Bakcground/Spring.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://bx38dqyegbimi" path="res://Script/main.gd" id="1_w48qg"]
[ext_resource type="Texture2D" uid="uid://6hx84j52glmv" path="res://Image/Player/chidorMA.png" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://dtqbbsqne585n" path="res://Script/player.gd" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://csxflm7uo0rao" path="res://Image/Bakcground/Summer.png" id="3_efxa6"]
[ext_resource type="Texture2D" uid="uid://cdmst7bdeetc" path="res://Image/Button/red_button01.png" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://b0rvd34hc2hk6" path="res://Image/Bakcground/Fall.png" id="4_dg77c"]
[ext_resource type="PackedScene" uid="uid://cxuycfk068akp" path="res://Enemy.tscn" id="5_7mycd"]
[ext_resource type="Script" uid="uid://4wj3me2iun" path="res://Script/spawner.gd" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://b8uk221pmdgkq" path="res://Image/Bakcground/Winter.png" id="5_ycdy4"]
[ext_resource type="Texture2D" uid="uid://7hqtvt3qnrgg" path="res://Image/Button/blue_button04.png" id="7_272bh"]
[ext_resource type="Texture2D" uid="uid://bm2hhgbfegjx1" path="res://Image/Heart.png" id="8_vivmo"]
[ext_resource type="AudioStream" uid="uid://gnly5nwjiexp" path="res://Sound/クイズ不正解1.mp3" id="10_dg77c"]
[ext_resource type="AudioStream" uid="uid://38x7qk87sa6g" path="res://Sound/Battle-TheOath_loop.ogg" id="13_ycdy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h2yge"]
atlas = ExtResource("2_0xm2m")
region = Rect2(0, 0, 320, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(147.373, 188.023)

[node name="Main" type="Node"]
script = ExtResource("1_w48qg")

[node name="Background" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_7mycd")
backgrounds = Array[Texture2D]([ExtResource("1_ig7tw"), ExtResource("3_efxa6"), ExtResource("4_dg77c"), ExtResource("5_ycdy4")])

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("1_ig7tw")

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
unique_name_in_owner = true
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
script = ExtResource("2_h2yge")
heart_texture = ExtResource("8_vivmo")
left_hit_active = ExtResource("4_5vw27")
left_hit_inactive = ExtResource("7_272bh")
right_hit_active = ExtResource("4_5vw27")
right_hit_inactive = ExtResource("7_272bh")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(-1, 0)
texture = SubResource("AtlasTexture_h2yge")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
position = Vector2(-2, 1)
scale = Vector2(1.13996, 1.436)
shape = SubResource("RectangleShape2D_lquwl")

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2(-1, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(-1, 1)
scale = Vector2(1.13996, 1.436)
shape = SubResource("RectangleShape2D_lquwl")

[node name="MissSound" type="AudioStreamPlayer2D" parent="Player"]
unique_name_in_owner = true
stream = ExtResource("10_dg77c")

[node name="Spawner" type="Node" parent="."]
script = ExtResource("5_lquwl")
enemy_scene = ExtResource("5_7mycd")

[node name="SpawnerR" type="Node2D" parent="Spawner"]
unique_name_in_owner = true
position = Vector2(1526, 403)

[node name="SpawnerL" type="Node2D" parent="Spawner"]
unique_name_in_owner = true
position = Vector2(-234, 403)

[node name="SpawnTimer" type="Timer" parent="Spawner"]
unique_name_in_owner = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -28.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2

[node name="HeartContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 193.0
offset_right = 20.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = 94.0
offset_right = 273.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150

[node name="LeftHit" type="Button" parent="CanvasLayer/Control/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("7_272bh")

[node name="RightHit" type="Button" parent="CanvasLayer/Control/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("7_272bh")

[node name="ComboControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ycdy4")
volume_db = -2.0
autoplay = true

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
